[package]
name = "bocchi-the-fuck"
version = "0.1.0"
edition = "2021"
description = "An esoteric programming language based on brainfuck"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.47"